made changes to add css and other requirements for project two

--- a/hobby/index.html
+++ b/hobby/index.html
@@ -4,26 +4,43 @@
     <title>Drew Snarski - Hobbies</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=none" />
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="../assets/css/screen.css" />
   </head>
   <body>
     <header id="header">
       <h1>Drew Snarski</h1>
     </header>
+    <nav id="navigation">
+      <ul class="nav">
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../resume/index.html">Resume</a></li>
+        <li><a href="">Hobby</a></li>
+      </ul>
+    </nav>
 
     <main id="content">
-      <p>Some of my hobbie are, but not limited to</p>
+      <h2>Some of my hobbie are, but not limited to</h2>
       <ul>
-        <li>Video Games</li>
+        <li>Video Games
           <ul>
+            <li><a href="https://steamcommunity.com/id/superpoo_/">My Steam Profile</a></li>
             <li>Team Fortress 2</li>
             <li>Halo: Master Chief Collection</li>
             <li>Super Smash Bros. Ultimate</li>
             <li>Pokemon</li>
           </ul>
-          <li>Baseball</li>
-          <ul>White Sox</ul>
-          <li>Football</li>
+        </li>
+          <li>Baseball
+          <ul>
+            <li>White Sox</li>
+          </ul>
+        </li>
+          <li>Football<ul>
+            <li>Bears</li>
+          </ul>
+        </li>
       </ul>
+
     </main>
 
     <footer id="footer">
