--- a/resume/index.html
+++ b/resume/index.html
@@ -4,11 +4,19 @@
     <title>Drew Snarski - Resume</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=none" />
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="../assets/css/screen.css" />
   </head>
   <body>
     <header id="header">
       <h1>Drew Snarski</h1>
     </header>
+    <nav id="navigation">
+      <ul class="nav">
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="">Resume</a></li>
+        <li><a href="../hobby/index.html">Hobbies</a></li>
+      </ul>
+    </nav>
     <main id="content">
       <article>
         <h2>Resume</h2>
@@ -21,7 +29,7 @@
           <h3>Education</h3>
               <h4>Illinois Institute of Technology</h4>
               <ul>
-                <li class="degree">Bachelors in Iformation Technology Management</li>
+                <li class="degree">Bachelors in Information Technology Management</li>
                 <li class="location">Chicago, IL</li>
                 <li class="year">2021</li>
               </ul>
