--- a/index.html
+++ b/index.html
@@ -4,17 +4,32 @@
     <title>Drew Snarski - Home</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=none" />
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="assets/css/screen.css" />
     </head>
     <body>
     <header id="header">
     <h1>Drew Snarski</h1>
     </header>
+    <nav id="navigation">
+      <ul class="nav">
+        <li><a href="">Home</a></li>
+        <li><a href="resume/index.html">Resume</a></li>
+        <li><a href="hobby/index.html">Hobbies</a></li>
+      </ul>
+    </nav>
     <main id="content">
-    <h3>About Me</h3>
-        <p>My name is Drew Snarski and I am a 21 year old student at IIT studying ITM. I started at the UNiversity of Dayton, in Dayton Ohio, studying Computer Engineering. I didnt enjoy Dayton, so I took some time at Harper college and re-evaluated what I wanted to major in. I decided that I did not care much for actually making software, but managing them, so I switched to ITM instead.
+    <h2>About Me</h2>
+        <p>My name is Drew Snarski and I am a 21 year old student at IIT studying ITM. I started at the University of Dayton, in Dayton Ohio, studying Computer Engineering. I didnt enjoy Dayton, so I took some time at Harper college and re-evaluated what I wanted to major in. I decided that I did not care much for actually making software, but managing them, so I switched to ITM instead.
         I have been interested in computers for really as long as I remember, but I really discovered I had a passion for them in high school. I have never built my own computer, but I did enough upgrades on a pre-built one I bought to essentially say I built it myself.
         Currently, I work at Chalet Nursery in Wilmette, working in marketing and e-commerce.
         </p>
+        <p>I also have a dog named Zoey. She is a English SHeepdog Poodle mix and is 1.5 years old. She is definately very puppy.
+        </p>
+        <section>
+          <figure>
+            <img src="../assets/img/ZoeySit.jpg" alt="Zoey does a good sit"
+            <figcaption>She does a good sit</figcaption>
+        </section>
     </main>
     <footer id="footer">
     <p>Site © Drew Snarski. All rights reserved.</p>
