--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         I have been interested in computers for really as long as I remember, but I really discovered I had a passion for them in high school. I have never built my own computer, but I did enough upgrades on a pre-built one I bought to essentially say I built it myself.
         Currently, I work at Chalet Nursery in Wilmette, working in marketing and e-commerce.
         </p>
-        <p>I also have a dog named Zoey. She is a English SHeepdog Poodle mix and is 1.5 years old. She is definately very puppy.
+        <p>I also have a dog named Zoey. She is a English Sheepdog Poodle mix and is 1.5 years old. She is definately very puppy.
         </p>
         <section>
           <figure>
-            <img src="../assets/img/ZoeySit.jpg" alt="Zoey does a good sit"
+            <img src="assets/img/ZoeySit.jpg" alt="Zoey does a good sit"
             <figcaption>She does a good sit</figcaption>
         </section>
     </main>
