--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <figure>
             <img src="assets/img/ZoeySit.jpg" alt="Zoey does a good sit"
             <figcaption>She does a good sit</figcaption>
+          </figure>
         </section>
     </main>
     <footer id="footer">
