--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </p>
         <section>
           <figure>
-            <img src="assets/img/ZoeySit.jpg" alt="Zoey does a good sit"
+            <img src="assets/img/ZoeySit.jpg" alt="Zoey does a good sit">
             <figcaption>She does a good sit</figcaption>
           </figure>
         </section>
