added the nav bar and added rouned edges to h1

--- a/resume/index.html
+++ b/resume/index.html
@@ -12,9 +12,9 @@
     </header>
     <nav id="navigation">
       <ul class="nav">
-        <li><a href="../index.html">Home</a></li>
+        <li><a href="../index.html" class="roundLeft">>Home</a></li>
         <li><a href="">Resume</a></li>
-        <li><a href="../hobby/index.html">Hobbies</a></li>
+        <li><a href="../hobby/index.html" class="roundRight">Hobbies</a></li>
       </ul>
     </nav>
     <main id="content">
