--- a/hobby/index.html
+++ b/hobby/index.html
@@ -12,9 +12,9 @@
     </header>
     <nav id="navigation">
       <ul class="nav">
-        <li><a href="../index.html">Home</a></li>
+        <li><a href="../index.html" class="roundLeft">>Home</a></li>
         <li><a href="../resume/index.html">Resume</a></li>
-        <li><a href="">Hobby</a></li>
+        <li><a href="" class="roundRight">Hobby</a></li>
       </ul>
     </nav>
 
