--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     </header>
     <nav id="navigation">
       <ul class="nav">
-        <li><a href="">Home</a></li>
+        <li><a href="" class="roundLeft">Home</a></li>
         <li><a href="resume/index.html">Resume</a></li>
-        <li><a href="hobby/index.html">Hobbies</a></li>
+        <li><a href="hobby/index.html" class="roundRight">Hobbies</a></li>
       </ul>
     </nav>
     <main id="content">
